--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
                     <div class="example-1-item"> <h2 class="div__h2">Repair time:</h2> <p class="div__p" >3.5 months</p></div>
                     <div class="example-1-item"> <h2 class="div__h2">Repair Cost:</h2> <p class="div__p" >Upon request</p></div>
                 </div>
+
+<div class="vector__sector2">
+
+<img src="./images/vector/left.svg" alt="strelki_shariki" class="vector__img">   
+<img src="./images/vector/Rectangle 7.4.svg" alt="strelki_shariki" class="vector__img">
+<img src="./images/vector/Rectangle 7.2.svg" alt="strelki_shariki" class="vector__img">
+<img src="./images/vector/Rectangle 7.2.svg" alt="strelki_shariki" class="vector__img">
+
+<img src="./images/vector/right.svg" alt="strelki_shariki" class="vector__img">
+
+</div>
+
                 <div class="izo__fon">
 
                 </div>
