--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
     <!-- Переход на третью секцию -->
     <section class="section__3">
 
+        <div class="section3__block">
+            <h1 class="title__section3">online control</h1>
+            <div class="section3__img__div">
+
+                <img src="./images/vector/Rectangle 6.7.svg" alt="Изображение камеры" class="section3__vector__img">                
+                <img src="./images/vector/Vector.svg" alt="Изображение камеры" class="section3__vector__img">
+                <img src="./images/vector/Rectangle 6.7.svg" alt="Изображение камеры" class="section3__vector__img">
+            </div>
+
+            <div class="section3__img__lamp">
+                img
+            </div>
+
+
+
+        </div>
 
 
 
@@ -139,6 +155,6 @@
 
 
 </main>
-<footer></footer>
+<footer class="footer"></footer>
 </body>
 </html>
