--- a/index.html
+++ b/index.html
@@ -127,14 +127,20 @@
                 <img src="./images/vector/Rectangle 6.7.svg" alt="Изображение камеры" class="section3__vector__img">
             </div>
 
-            <div class="section3__img__lamp">
-                img
+            <div class="section3__img__rem__div">
+                <div class="play__rem"><img src="./images/vector/Polygon.svg" alt="start"></div>
+                <img src="./images/image 6.png" alt="лампочка" class="img__rem">
+                
             </div>
+            <div class="poloska__div"><img src="./images/vector/poloska.svg" alt="poloska" class="poloska__img"></div>
+            <div class="text__div">At each facility, a camera is installed that broadcasts the progress of work 
+                on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. 
+                You can watch the live broadcast from one of our facilities! Leave a request below and you will receive a 
+                link to the broadcast</div>
 
-
-
+                <div class="inputs__div"><input class="inputs" type="text"><input class="inputs" type="text" id="password"><label for="password">dsfs</label><button class="main-button__1">submit</button></div>
         </div>
-
+        
 
 
 
