--- a/index.html
+++ b/index.html
@@ -354,10 +354,70 @@
     <div class="s6__links__div"><a href="#" class="s6__links">Mediterranean style</a>       </div>
     <div class="s6__links__div"><a href="#" class="s6__links">High tech</a>                 </div>
     <div class="s6__links__div"><a href="#" class="s6__links">Eclecticism</a>               </div>
+</div>
+
+
+<div class="title__media"><h1 class="title1__s6">We realize your wildest fantasies</h1>
+
+<div class="media__div__img">
+
+    <div class="strelki_div">
+        <div class="strelka"> <img src="./images/vector/strelka <.svg" alt="strelki_shariki" class="vector__img2"> </div>
+        <div class="strelka"> <img src="./images/vector/strelka >.svg" alt="strelki_shariki" class="vector__img2"> </div>
+    </div>
+
+</div>
+</div>
+
+</section>
+
+<!-- Переход на седьмую секцию -->
+
+<section class="section__7">
+
+<div class="s7__block container">
+    <div class="s7__block__top">
+        <div class="s7__title"><h1 class="s7__h1">our clients</h1></div>
+            <div class="s7__vector">
+                <img src="./images/vector/poloska.svg" alt="as">
+                <img src="./images/vector/s7__vector.svg" alt="ads">
+                <img src="./images/vector/poloska.svg" alt="as">
+            </div>
+        <div class="s7__text">80% of our customers recommend us to their friends and family.</div>
+    </div>
+    <div class="s7__block__bottom">
+        <div class="bottom__divs">
+            <div class="bottom__into">
+                <div class="ava__text">
+
+                </div>
+            </div>
+
+        </div>
+        <div class="bottom__divs">
+            <div class="bottom__into">
+                <div class="ava__text">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="bottom__divs">
+            <div class="bottom__into">
+                <div class="ava__text">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
 </div>
+
+
+
 
 
 
