--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <ul class="header-navigation">
                 <li class="header-navigation__item"><a class="header-navigation__link" href="#home">HOME</a></li>
                 <li class="header-navigation__item"><a class="header-navigation__link" href="#projects">PROJECTS</a></li>
-                <li class="header-navigation__item"><a class="header-navigation__link" href="#home">MEASUREMENT</a></li>
-                <li class="header-navigation__item"><a class="header-navigation__link" href="#home">TEAM</a></li>
-                <li class="header-navigation__item"><a class="header-navigation__link" href="#home">REVIEWS</a></li>
-                <li class="header-navigation__item"><a class="header-navigation__link" href="#home">CONTACTS</a></li>
+                <li class="header-navigation__item"><a class="header-navigation__link" href="#MEASUREMENT">MEASUREMENT</a></li>
+                <li class="header-navigation__item"><a class="header-navigation__link" href="#TEAM">TEAM</a></li>
+                <li class="header-navigation__item"><a class="header-navigation__link" href="#REVIEWS">REVIEWS</a></li>
+                <li class="header-navigation__item"><a class="header-navigation__link" href="#CONTACTS">CONTACTS</a></li>
              </ul>
       
         </nav>
@@ -38,7 +38,7 @@
 </header>
 <main>
 
-    <section class="hero">
+    <section class="hero" id="home">
 
         <div class="container hero-container">
             <h1 class="title">
@@ -117,7 +117,7 @@
 
     </section>
     <!-- Переход на третью секцию -->
-    <section class="section__3">
+    <section class="section__3" id="MEASUREMENT">
 
         <div class="section3__block">
             <h1 class="title__section3">online control</h1>
@@ -154,7 +154,7 @@
 
 
         </div>
-        <div class="button__div">
+        <div class="button__div" id="TEAM">
             <button class="main-button__rem">submit</button>
         </div>
         <!-- Заблокировал этот чекбокс для больших экранов/ так как не мог адаптировать его и создал его клон -->
@@ -174,7 +174,7 @@
     </section>
 <!-- Переход на четвертую секцию -->
 
-<section class="section__4">
+<section class="section__4" id="TEAM">
 
     <div class="section4__block container">
 
@@ -266,7 +266,7 @@
 </section>
 <!-- Переход на пятую секцию -->
 
-<section class="section__5">
+<section class="section__5" id="REVIEWS">
 
 <div class="section5__block container">
     <div class="s5__block__line">
@@ -330,7 +330,7 @@
 </section>
 <!-- Переход на шестую секцию -->
 
-<section class="section__6">
+<section class="section__6" id="CONTACTS">
 
 <div class="s6__mono__div"><img src="./images/s6__fon.png" alt="mono" class="mono__img"></div>
 
@@ -550,7 +550,7 @@
     <div class="s8__icon__2"><img src="./images/vector/s8__icon__2.svg" alt="instagram"></div>
 </div>
 
-<div class="s8__karta"><img src="./images/karta.png" alt="karta"></div>
+<div class="s8__karta"><img src="./images/karta.png" alt="karta" class="karta"></div>
 
 
 </div>
@@ -562,6 +562,11 @@
 
 
 </main>
+
+
+
+
+<!-- FOOTER /////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 <footer class="header" id="footer">
 
     <div id="footer__div">
